add odo to server gui

--- a/python/templates/simple.html
+++ b/python/templates/simple.html
@@ -23,6 +23,13 @@
 </tr>
 </table>
 
+<table>
+    <tr>
+    <th rowspan=2>Odometry (x, y)</th>
+    <td id="odometry0"></td><td id="odometry1"></td>
+    </tr>
+    </table>
+
 <div id="joystick">
 </div>
 
